--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "cryptography>=43.0.3",
+    "paho-mqtt>=2.1.0",
     "pbkdf2>=1.3",
     "pycryptodome>=3.21.0",
     "python-dotenv>=1.0.1",
