--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   haystack:
-    image: ghcr.io/bernikr/macless-haystack-owntracks
+    image: ghcr.io/bernikr/ownhaystack
     depends_on:
       - mqtt
       - anisette
