--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   haystack:
-    image: ghcr.io/bernikr/ownhaystack
+    image: ghcr.io/bernikr/ownhaystack:0.1.0
     depends_on:
       - mqtt
       - anisette
